tempfile/indoc/tests/ui/non-string.stderr
error: argument must be a single string literal
 --> tests/ui/non-string.rs:4:12
  |
4 |     indoc!(64);
  |            ^^
